css/style.css
@font-face {
  font-family: 'AGOpus Cyrillic';
  font-weight: 400;
  src: url('../assets/fonts/AGOpus-Cyrillic.otf');
}

@font-face {
  font-family: 'AGOpus Cyrillic';
  font-weight: 700;
  src: url('../assets/fonts/AGOpus-Cyrillic-Bold.otf');
}

@font-face {
  font-family: 'Chervil';
  font-weight: 400;
  src: url('../assets/fonts/Chervil-Regular.otf');
}
/* ---------------------------------------------------- */

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'AGOpus Cyrillic', sans-serif;
  color: #1a1a19;
  background-color: #0e141b;
  /* background-color: #4d6379; */
}

.wrapper {
  position: relative;
  min-height: 100dvh;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-image: radial-gradient(
      circle,
      transparent 90%,
      rgba(20, 20, 38, 0.6) 95%,
      rgb(0 1 8 / 80%) 100%
    ),
    url('../assets/img/main-bg.png');
  /* background-repeat: no-repeat; */
  background-repeat: round;
  background-size: cover;
  overflow: hidden;
}
.wrapper::after {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-image: url('../assets/img/starts.png');
  background-size: contain;
  background-position: top center;
  background-repeat: no-repeat;
  pointer-events: none;
}

.header {
  position: relative;
  z-index: 50;
}

.header__image-decor {
  position: relative;
}
.header__image-decor::after,
.header__image-decor::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-size: contain;
  background-repeat: no-repeat;
  filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.35));
  /* -webkit-filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.15)) contrast(1.1); */
  /* -moz-filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.15)) contrast(1.1); */
}
.header__image-decor::after {
  z-index: 98;
  background-image: url('../assets/img/flashlights-1.png');
  animation: flickering-lights 5s linear infinite 1s;
}
.header__image-decor::before {
  z-index: 99;
  background-image: url('../assets/img/flashlights-2.png');
  animation: flickering-lights 6s linear infinite 0s;
}

@keyframes flickering-lights {
  0% {
    filter: contrast(1.35);
  }
  15% {
    filter: contrast(0.65);
  }
  45% {
    filter: contrast(0.65);
  }
  60% {
    filter: contrast(1.25);
  }
  70% {
    filter: contrast(0.65);
  }
  100% {
    filter: contrast(0.65);
  }
}

.header__decor {
  width: 100%;
  object-fit: cover;
  filter: drop-shadow(
    max(2px, 0.8vw) max(4px, 1.2vw) max(4px, 1vw) rgba(6, 3, 25, 0.7)
  );
  -webkit-filter: drop-shadow(
    max(2px, 0.8vw) max(4px, 1.2vw) max(4px, 1vw) rgba(6, 3, 25, 0.7)
  );
  -moz-filter: drop-shadow(
    max(2px, 0.8vw) max(4px, 1.2vw) max(4px, 1vw) rgba(6, 3, 25, 0.7)
  );
}

.page {
  position: relative;
  top: -10vw;
  padding: 0 10px 10px;
  flex: 1 0 auto;
  /* transform: translateY(-10vw); */
}
@media screen and (min-width: 767.98px) {
  .page {
    top: -15vw;
  }
}

.page__logo {
  margin-top: max(30px, 7vw);
}

.logo {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: max(15px, 2vw);
}

.logo__text {
  font-family: 'Chervil', sans-serif;
  font-size: clamp(30px, 0.5rem + 6vw, 120px);
  color: #000000;
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
}

.logo__image-box {
  flex-shrink: 0;
  width: clamp(40px, 8.5vw, 150px);
  filter: drop-shadow(2px 4px 2px rgba(0, 0, 0, 0.3));
  -webkit-filter: drop-shadow(2px 4px 2px rgba(0, 0, 0, 0.3));
  -moz-filter: drop-shadow(2px 4px 2px rgba(0, 0, 0, 0.3));
}

.logo__image {
  width: 100%;
  object-fit: contain;
}

.page__greeting {
  font-size: clamp(16px, 0.5rem + 2.5vw, 76px);
  text-align: center;
  line-height: 1.2;
  color: #603e18;
  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.18);
}

.page__wedding-date {
  margin-top: max(35px, 7vw);
  text-align: center;
  color: #ffffff;
  font-size: clamp(22px, 0.5rem + 3vw, 76px);
  /* text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2); */
}

.page__info {
  margin-top: max(50px, 8vw);
}

.info {
}

.info__title {
  font-size: clamp(16px, 0.5rem + 2vw, 76px);
  /* font-weight: 700; */
  text-align: center;
  line-height: 1.3;
  color: #603e18;
  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
}

.info__list {
  margin-top: max(30px, 5vw);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: max(25px, 2.5vw);
}

.info__item {
  position: relative;

  padding: max(25px, 3vw) max(15px, 2vw);
  flex: 0 1 clamp(280px, 300px + 10vw, 28vw);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;

  background: rgba(255, 255, 255, 0.15);
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: max(16px, 1vw);

  overflow: hidden;
  box-shadow: 0 max(4px, 0.5vw) max(10px, 1.2vw) rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(max(3px, 0.35vw));
  -webkit-backdrop-filter: blur(max(3px, 0.35vw));
}
.info__item:hover .info__item-icon-box {
  transform: scale(1.15);
}
.info__item:after {
  content: '';
  position: absolute;
  top: -20%;
  left: -100%;
  height: 140%;
  width: 100%;
  background: rgba(255, 255, 255, 0.13);
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.25) 77%,
    rgba(255, 255, 255, 0.5) 92%,
    rgba(255, 255, 255, 0) 100%
  );
  opacity: 0;
  transform: skew(-45deg);
}
.info__item:hover:after {
  left: 120%;
  transition-duration: 0.7s, 0.7s, 0.15s;
  transition-property: left, top, opacity;
  transition-timing-function: ease-in-out;
  opacity: 1;
}

.info__item-icons-box {
  display: flex;
  gap: min(30px, 7vw);
}

.info__item-icon-box {
  margin-bottom: max(20px, 4vw);
  width: clamp(48px, 6vw, 120px);
  aspect-ratio: 1;
  transition: transform ease-in-out 0.4s;
}

.info__item-icon {
  width: 100%;
  object-fit: cover;
  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.15));
  -webkit-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.15));
  -moz-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.15));
}

.info__item-icon-box.relative {
  position: relative;
}

.info__item-icon-box.exclude::after,
.info__item-icon-box.include::after {
  content: '';
  position: absolute;
  z-index: 5;
  width: 80%;
  aspect-ratio: 1;
  background-size: cover;
}

.info__item-icon-box.exclude::after {
  left: -70%;
  background-image: url('../assets/img/icons/close.svg');
}
.info__item-icon-box.include::after {
  right: -70%;
  background-image: url('../assets/img/icons/check.svg');
}

.info__item-text {
  flex: 1 0 auto;
  text-align: center;
}

.text {
  font-size: clamp(14px, 0.5rem + 1vw, 64px);
  line-height: 1.3;
  letter-spacing: 0.5px;
  /* color: #f9f6ed; */
  color: #212120;
  text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.15);
}

.footer {
}

/* #snow {
  position: absolute;
  z-index: 1000;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.snowflake {
  position: absolute;
  width: 6px;
  height: 6px;
  background: linear-gradient(white, white);
  border-radius: 50%;
  filter: drop-shadow(0 0 6px white);
} */

